# BrainCell

./: .eslintrc.cjs  .gitignore  .vercelignore  QUICK_DEPLOY.md  RAILWAY_MONITORING.md  README.md  index.html  package.json  tailwind.config.js  vercel.json  vite.config.ts
.github/workflows/: ci-cd.yml
braincell_backend/: .dockerignore  Aptfile  DOCKER_SIZE_OPTIMIZATION.md  Dockerfile  ML_ALTERNATIVES.md  Makefile  Procfile  RAILWAY_DEPLOYMENT.md  README_DEPLOY.md  nixpacks.toml  pyproject.toml  requirements.txt
braincell_backend/app/: config.py  llm_client.py  main.py  orchestrator.py
braincell_backend/app/api/: schemas.py
braincell_backend/app/api/routes/: classroom.py  session.py
braincell_backend/app/cognitive_modules/: face_emotion.py  knowledge_gaps.py  voice_analyzer.py  voice_emotion.py
braincell_backend/app/database/: __init__.py  models.py
braincell_backend/app/routers/: users.py
braincell_backend/app/utils/: prompt_crafter.py  typing.py
braincell_backend/migrations/: add_users_table.py
src/: App.tsx  main.tsx  vite-env.d.ts
src/components/Auth/: AuthScreen.tsx  ClerkAuthWrapper.tsx  CustomAuthForm.tsx  PreAuthRoleSelection.tsx  RoleSelection.tsx  SupabaseAuth.tsx
src/components/Chat/: ChatPanel.tsx  InputBar.tsx  MessageBubble.tsx
src/components/Cognitive/: CognitiveMonitor.tsx
src/components/Diagrams/: MermaidBlock.tsx
src/hooks/: useNetworkStatus.ts  useTextFriction.ts
src/lib/: api.ts  offlineStorage.ts  state.ts  supabase.ts  utils.ts
src/mock/: demoResponses.ts
src/styles/: global.css
src/types/: index.ts
(+16 files in other folders)
